--- a/.gitignore
+++ b/.gitignore
@@ -51,3 +51,13 @@ Thumbs.db
 
 # User configuration (optional - uncomment to ignore local config)
 # config.yaml
+
+# Version control
+*.orig
+
+# Coverage reports
+.coverage.*
+coverage.xml
+
+# Build artifacts
+*.whl
