--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -2,15 +2,17 @@
 -r requirements.txt
 
 # Testing
-pytest>=7.4.0
-pytest-cov>=4.1.0
-pytest-mock>=3.11.0
+pytest>=7.4.0,<8.0.0
+pytest-cov>=4.1.0,<5.0.0
+pytest-mock>=3.12.0,<4.0.0
 
 # Code quality
-black>=23.7.0
-flake8>=6.1.0
-pylint>=2.17.0
-mypy>=1.5.0
+black>=23.12.0,<24.0.0
+pylint>=3.0.0,<4.0.0
+mypy>=1.7.0,<2.0.0
+types-requests>=2.31.0,<3.0.0
+types-PyYAML>=6.0.0,<7.0.0
 
-# Type stubs
-types-requests>=2.31.0
+# Build tools
+build>=1.0.0,<2.0.0
+twine>=4.0.0,<5.0.0
